# Veemo

./: .gitignore  README.md  SERVICE.md  pyproject.toml  veemo.toml  veemo.toml.example
src/veemo/: __init__.py  backend.py  cli.py  config.py  display.py  identity.py  runner.py  types.py
src/veemo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
systemd/: veemo.service
tests/: test_backend.py  test_config.py  test_display.py  test_identity.py  test_runner.py
